<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>code-checker</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <antlr4.version>4.13.2</antlr4.version>
    </properties>

    <dependencies>
        <!-- ANTLR v4 Runtime -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr4.version}</version>
        </dependency>
        <!-- CommonMark -->
        <dependency>
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark</artifactId>
            <version>0.27.0</version>
        </dependency>            
    </dependencies>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- Maven Surefire Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8</argLine>
                    <forkCount>1</forkCount>
                </configuration>
            </plugin>

            <!-- ANTLR Maven Plugin -->
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>${antlr4.version}</version>
                <executions>
<!--                    <execution>-->
<!--                        <id>markdown</id>-->
<!--                        <goals>-->
<!--                            <goal>antlr4</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <sourceDirectory>${project.basedir}/src/main/java/org/example/code/checker/parser/markdown/parser</sourceDirectory>-->
<!--                            <outputDirectory>${project.basedir}/src/main/java/org/example/code/checker/parser/markdown/parser</outputDirectory>-->
<!--                            <includes>-->
<!--                                <include>**/*.g4</include>-->
<!--                            </includes>-->
<!--                            <packageName>org.example.code.checker.checker.markdown.parser</packageName>-->
<!--                            <visitor>true</visitor>-->
<!--                            <listener>true</listener>-->
<!--                        </configuration>-->
<!--                    </execution>-->
                    <!-- 按需继续添加其它语言 -->
                </executions>
            </plugin>

            <!-- Exec Maven Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <mainClass>org.example.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>